--- a/src/bin/text_viewer.glade
+++ b/src/bin/text_viewer.glade
@@ -8,7 +8,7 @@
     <property name="icon_size">2</property>
     <property name="icon_name">document-open</property>
   </object>
-  <object class="GtkWindow" id="window">
+  <object class="GtkApplicationWindow" id="window">
     <property name="can_focus">False</property>
     <property name="title" translatable="yes">Text File Viewer</property>
     <property name="window_position">center</property>
