--- a/src/bin/gtktest.glade
+++ b/src/bin/gtktest.glade
@@ -489,7 +489,7 @@ audio-volume-medium</property>
                   <object class="GtkSpinner" id="spinner">
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
-                    <property name="active">True</property>
+                    <property name="active">False</property>
                   </object>
                   <packing>
                     <property name="expand">False</property>
